# futility

./: .gitignore  Cargo.toml  README.md  output_log.txt
.github/workflows/: release.yml
src/: app.rs  event.rs  file_watcher.rs  handler.rs  job_watcher.rs  lib.rs  main.rs  slurm.rs  tui.rs  ui.rs
